version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/Mechanical/Table/FixedWidthImportSettings.rst.txt
.. vale off



:class:`FixedWidthImportSettings`
=================================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.Mechanical.Table.FixedWidthImportSettings

   Bases: :py:obj:`object`


   
   T:Ansys.Mechanical.Table.FixedWidthImportSettings defines how to import data from a delimited source
   for tabular data.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: FixedWidthImportSettings

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Clear`
            - 
          * - :py:attr:`~GetEnumerator`
            - 
          * - :py:attr:`~RemoveAt`
            - Removes the import definition at the specified index.
          * - :py:attr:`~UseColumn`
            - ..


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ColumnWidths`
            - Gets or sets the specified column widths.
          * - :py:attr:`~Count`
            - Gets the number of column definitions.
          * - :py:attr:`~Format`
            - Gets the existing corresponding format.
          * - :py:attr:`~Item`
            - Item property.
          * - :py:attr:`~PathType`
            - Gets or sets the type of URI provided for Table import.
          * - :py:attr:`~SkipFooter`
            - Gets or sets the number of rows to ignore at the end of the file during import.
          * - :py:attr:`~SkipRows`
            - Gets or sets the number of rows to skip over at the start of the file during import.







Property detail
---------------
.. py:property:: ColumnWidths
   :type: Optional[Any]


   
   Gets or sets the specified column widths.
   When setting, The value provided to P:Ansys.Mechanical.Table.FixedWidthImportSettings.ColumnWidths may be either:
   number
















   ..
       !! processed by numpydoc !!

.. py:property:: Count
   :type: Optional[int]


   
   Gets the number of column definitions.
















   ..
       !! processed by numpydoc !!

.. py:property:: Format
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.Table.ImportFormat]


   
   Gets the existing corresponding format.
















   ..
       !! processed by numpydoc !!

.. py:property:: Item
   :type: Optional[Ansys.Mechanical.Table.ColumnarDataImportDefinition]


   
   Item property.
















   ..
       !! processed by numpydoc !!

.. py:property:: PathType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.Common.PathType]


   
   Gets or sets the type of URI provided for Table import.
   Default: F:Ansys.Mechanical.DataModel.MechanicalEnums.Common.PathType.Absolute
















   ..
       !! processed by numpydoc !!

.. py:property:: SkipFooter
   :type: Optional[int]


   
   Gets or sets the number of rows to ignore at the end of the file during import.
















   ..
       !! processed by numpydoc !!

.. py:property:: SkipRows
   :type: Optional[int]


   
   Gets or sets the number of rows to skip over at the start of the file during import.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Clear() -> None
   

.. py:method:: GetEnumerator() -> Iterator[Ansys.Mechanical.Table.ColumnarDataImportDefinition]
   

.. py:method:: RemoveAt(index: int) -> None

   
   Removes the import definition at the specified index.

   ..
       !! processed by numpydoc !!

.. py:method:: UseColumn(index: int, variableType: Ansys.Mechanical.DataModel.MechanicalEnums.Table.VariableType, variableClassification: Ansys.Mechanical.DataModel.MechanicalEnums.Table.VariableClassification, unit: str, name: str) -> Ansys.Mechanical.Table.ColumnarDataSourceBase

   

   ..
       !! processed by numpydoc !!



.. vale on